# support-me

./: .env.local  .gitignore  PRD(v3).md  README.md
.github/workflows/: ci.yml
anchor/: .gitignore  README.md  docker-compose.yaml  issue-usdc.mjs  setup.sh
anchor/config/: assets.yaml.template  reference-config.yaml.template  stellar.localhost.toml.template
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
backend/src/errors/: AppError.ts
backend/src/middleware/: adminAuth.ts  asyncHandler.ts  auth.ts  errorHandler.ts  validate.ts
backend/src/routes/: admin.ts  auth.ts  creators.ts  donations.ts  events.ts  withdrawals.ts
backend/src/schemas/: auth.ts  creators.ts  donations.ts  withdrawals.ts
backend/src/services/: eventBus.ts  sorobanEventListener.ts
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs
contracts/creator-registry/: Cargo.toml
contracts/creator-registry/src/: lib.rs
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs
docs/: architecture.md  v3-plan.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.jsx
frontend/app/[username]/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/donate/: page.jsx
frontend/app/settings/: page.tsx
frontend/components/: AppNav.tsx  DonationForm.jsx  ProtectedRoute.tsx  Skeleton.tsx  TipChart.tsx  TipJar.tsx  TipJarLoader.tsx  WalletInfo.jsx  WalletMenu.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: anchor.js  assets.js  contract.js  prices.js  socials.ts  upload.ts  usePrices.js  wallet.js
(+21 files in other folders)
