[package]
name = "creator-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# cdylib so this crate builds to a standalone deployable Soroban contract;
# rlib so the `donation` contract's tests can register this contract's Rust
# type directly in a shared test `Env` for cross-contract integration tests.
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
